# cse100-pa3

./: compressed1.txt  compressed2.txt  meson.build  valgrind
src/: compress.cpp  meson.build  uncompress.cpp
src/encoder/: HCTree.cpp  HCTree.hpp  meson.build
test/: meson.build  test_HCTree.cpp
