test_HC_tree_exe = executable('test_HCTree.cpp.executable',
sources: ['test_HCTree.cpp'],
dependencies: [HC_tree_dep, input_stream_dep, output_stream_dep, gtest_dep])
test('my HCTree test', test_HC_tree_exe)

test_bitinput_exe = executable('test_BitInpueStream.cpp.executable',
sources: ['test_BitInpueStream.cpp'],
dependencies: [HC_tree_dep, input_stream_dep, output_stream_dep, gtest_dep])
test('my bitinput test', test_bitinput_exe)

test_bitoutput_exe = executable('test_BitOutpueStream.cpp.executable',
sources: ['test_BitOutpueStream.cpp'],
dependencies: [HC_tree_dep, input_stream_dep, output_stream_dep, gtest_dep])
test('my bitoutput test', test_bitoutput_exe)